<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:paddingBottom="20dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:fontFamily="@font/myriadpro"
    android:textColor="@color/colorAccent"
    android:id="@+id/dialog_playlist_title"
    android:text="@string/playlist_title">
</TextView>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/my_playlist_4"
        android:id="@+id/dialog_title_edittext">
    </EditText>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/myriadpro"
            android:textColor="@color/colorAccent"
            android:id="@+id/dialog_playlist_description"
            android:text="@string/description"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:gravity="top"
            android:hint="@string/give_your_playlist_a_catchy_description"
            android:id="@+id/dialog_description_edittext">
        </EditText>
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    app:cardCornerRadius="10dp">
        <Button
            android:id="@+id/button_create"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/create"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"/>
</androidx.cardview.widget.CardView>
</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/image_cardview"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100sp"
            android:layout_width="wrap_content"
            app:cardCornerRadius="100dp"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/playlist_image_upload"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/image_placeholder" />
            <ProgressBar
                android:id="@+id/load_playlist_image_progress"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:visibility="invisible">
            </ProgressBar>
        </androidx.cardview.widget.CardView>

        <Switch
            android:id="@+id/public_switch"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Public?"
            android:layout_above="@id/helper_text" />
        <TextView
            android:id="@+id/helper_text"
            android:layout_above="@id/image_cardview"
            android:layout_width="120dp"
            android:textSize="12sp"
            android:fontFamily="@font/myriadpro"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"
            android:text="If true the playlist will be public, if false it will be private."/>


    </RelativeLayout>
</LinearLayout>